tests/ui/rust-2018/dyn-keyword.stderr
error: `dyn` is a keyword in the 2018 edition
  --> $DIR/dyn-keyword.rs:8:9
   |
LL |     let dyn = ();
   |         ^^^ help: you can use a raw identifier to stay compatible: `r#dyn`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
note: the lint level is defined here
  --> $DIR/dyn-keyword.rs:5:9
   |
LL | #![deny(keyword_idents)]
   |         ^^^^^^^^^^^^^^
   = note: `#[deny(keyword_idents_2018)]` implied by `#[deny(keyword_idents)]`

error: aborting due to 1 previous error

